@@ -126,20 +126,6 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
-name|DFSConfigKeys
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
 name|protocol
 operator|.
 name|ClientProtocol
@@ -412,51 +398,23 @@ block|}
 name|int
 name|port
 init|=
-name|host
-operator|.
-name|getInfoPort
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
 literal|"https"
 operator|.
 name|equals
 argument_list|(
 name|scheme
 argument_list|)
-condition|)
-block|{
-specifier|final
-name|Integer
-name|portObject
-init|=
-operator|(
-name|Integer
-operator|)
-name|getServletContext
+condition|?
+name|host
+operator|.
+name|getInfoSecurePort
 argument_list|()
+else|:
+name|host
 operator|.
-name|getAttribute
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_DATANODE_HTTPS_PORT_KEY
-argument_list|)
+name|getInfoPort
+argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|portObject
-operator|!=
-literal|null
-condition|)
-block|{
-name|port
-operator|=
-name|portObject
-expr_stmt|;
-block|}
-block|}
 name|String
 name|dtParam
 init|=
