@@ -441,6 +441,16 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|URLConnectionFactory
+name|factory
+init|=
+name|mock
+argument_list|(
+name|URLConnectionFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|HftpFileSystem
 operator|.
 name|RangeHeaderUrlOpener
@@ -453,6 +463,8 @@ name|HftpFileSystem
 operator|.
 name|RangeHeaderUrlOpener
 argument_list|(
+name|factory
+argument_list|,
 operator|new
 name|URL
 argument_list|(
@@ -493,6 +505,8 @@ name|HftpFileSystem
 operator|.
 name|RangeHeaderUrlOpener
 argument_list|(
+name|factory
+argument_list|,
 operator|(
 name|URL
 operator|)
@@ -827,6 +841,11 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+name|is
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -838,6 +857,16 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|URLConnectionFactory
+name|factory
+init|=
+name|mock
+argument_list|(
+name|URLConnectionFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|ByteRangeInputStream
 name|brs
 init|=
@@ -848,6 +877,8 @@ name|HftpFileSystem
 operator|.
 name|RangeHeaderInputStream
 argument_list|(
+name|factory
+argument_list|,
 operator|new
 name|URL
 argument_list|(
