@@ -42,6 +42,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|OutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|InetSocketAddress
@@ -167,6 +177,20 @@ operator|.
 name|http
 operator|.
 name|HttpConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|net
+operator|.
+name|NetUtils
 import|;
 end_import
 
@@ -434,6 +458,9 @@ operator|.
 name|waitActive
 argument_list|()
 expr_stmt|;
+name|OutputStream
+name|os
+init|=
 name|cluster
 operator|.
 name|getFileSystem
@@ -447,6 +474,15 @@ argument_list|(
 literal|"/test"
 argument_list|)
 argument_list|)
+decl_stmt|;
+name|os
+operator|.
+name|write
+argument_list|(
+literal|23
+argument_list|)
+expr_stmt|;
+name|os
 operator|.
 name|close
 argument_list|()
@@ -464,17 +500,12 @@ argument_list|()
 decl_stmt|;
 name|nnAddr
 operator|=
-name|addr
+name|NetUtils
 operator|.
-name|getHostName
-argument_list|()
-operator|+
-literal|":"
-operator|+
+name|getHostPortString
+argument_list|(
 name|addr
-operator|.
-name|getPort
-argument_list|()
+argument_list|)
 expr_stmt|;
 name|conf
 operator|.
@@ -568,6 +599,37 @@ literal|"/test"
 argument_list|)
 argument_list|)
 argument_list|)
+expr_stmt|;
+name|InputStream
+name|is
+init|=
+name|fs
+operator|.
+name|open
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/test"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|23
+argument_list|,
+name|is
+operator|.
+name|read
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|is
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 name|fs
 operator|.
